[package]
name = "diesel_pg_hstore"
version = "0.2.0"
authors = ["Lori Holden <noreply@loriholden.com>"]
description = "Postgres Hstore support for Diesel"

documentation = "https://docs.rs/diesel_pg_hstore/"
repository = "https://github.com/lholden/diesel_pg_hstore"

license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["diesel", "postgres", "hstore"]

categories = ["database"]

[dependencies]
diesel = { version = "~1.0.0-beta1", features = ["postgres"] }
byteorder = "~1.2"
fallible-iterator = "~0.1"

[dev-dependencies]
dotenv = "~0.10"
